brew: install clis

--- a/dot_Brewfile.tmpl
+++ b/dot_Brewfile.tmpl
@@ -10,3 +10,42 @@ cask "karabiner-elements"
 
 # Fonts
 cask "font-fira-code-nerd-font"
+
+# CLIs
+brew "mise"                              # Tool version manager
+brew "git"                               # VCS
+brew "git-absorb"                        # Git utility for fixups
+brew "just"                              # Command runner
+brew "chezmoi"                           # Dotfile manager
+brew "zoxide"                            # Change directory
+brew "eza"                               # List files
+brew "bat"                               # View files
+brew "bat-extras"                        # Bat utilities
+brew "fd"                                # Find files
+brew "ripgrep"                           # Search files
+brew "ripgrep-all"                       # Ripgrep utilities
+brew "git-delta"                         # Compare files
+brew "sd"                                # Search and replace files
+brew "choose"                            # Extract text from files
+brew "rust-parallel"                     # Parse arguments and execute commands
+brew "pueue"                             # Background task executor
+brew "watchexec"                         # File watcher
+brew "scc"                               # Code counter
+brew "hyperfine"                         # Benchmarking
+brew "procs"                             # View running processes
+brew "ouch"                              # Compress and decompress files
+brew "age"                               # Encryption
+brew "gojq"                              # JSON toolkit
+brew "taplo"                             # TOML toolkit
+brew "yq"                                # JSON, TOML, YAML, XML and CSV toolkit
+brew "precious"                          # Linter and formatter
+brew "lefthook"                          # Git hook manager
+brew "tree-sitter-cli"                   # Treesitter parser generator
+brew "make"                              # Build system
+brew "gnupg"                             # Encryption and signing
+brew "gh"                                # GitHub client
+brew "podman"                            # Containerization
+brew "podman-compose"                    # Containerization
+brew "colima", restart_service: :changed # Containerization
+brew "docker"                            # Containerization
+brew "kubernetes-cli"                    # Container orchestration
