brew: install tuis

--- a/dot_Brewfile.tmpl
+++ b/dot_Brewfile.tmpl
@@ -49,3 +49,14 @@ brew "podman-compose"                    # Containerization
 brew "colima", restart_service: :changed # Containerization
 brew "docker"                            # Containerization
 brew "kubernetes-cli"                    # Container orchestration
+
+# TUIs
+brew "fzf"        # Fuzzy finder
+brew "yazi"       # Filesystem explorer
+brew "neovim"     # Text editor
+brew "lazygit"    # Git client
+brew "zellij"     # Terminal multiplexer
+brew "bottom"     # System monitor
+brew "podman-tui" # Podman client
+brew "lazydocker" # Docker client
+brew "k9s"        # Kubernetes client
