zsh: configure work environment

--- a/dot_zshenv.tmpl
+++ b/dot_zshenv.tmpl
@@ -7,6 +7,11 @@ ZINIT[NO_ALIASES]=1 # Disable aliases
 
 # Environment
 export GOPATH=~/.go # Global Go directory
+# TODO: Check if this is required, if not remove it and rename file to not include tmpl extension
+{{- if eq .profile "cyberhaven" }}
+# Cyberhaven # TODO: Remove this
+export GOPRIVATE=github.com/CyberhavenInc # Go private modules
+{{- end }}
 
 # Path
 declare -U path # De-duplicate path elements
