brew: install shell utilities

--- a/dot_Brewfile.tmpl
+++ b/dot_Brewfile.tmpl
@@ -71,6 +71,13 @@ cask "utm"           # Virtualisation and emulation
 # Proprietary
 cask "raycast" # Application launcher
 
+# Shell utilities
+brew "starship" # Prompt
+brew "atuin"    # History
+brew "carapace" # Autocompletion
+# Autocorrection # TODO: Add to official registry
+tap "timescam/tap"
+brew "timescam/tap/pay-respects"
 
 {{ if eq .profile "default" -}}
 # Default profile
