--- a/dot_Brewfile.tmpl
+++ b/dot_Brewfile.tmpl
@@ -100,6 +100,11 @@ brew "fennel"
 brew "fennel-ls" # Language server
 brew "fnlfmt"    # Formatter
 
+# Rust
+brew "rust"
+brew "cargo-binstall" # Binary installer
+brew "rust-analyzer"  # Language server
+
 {{ if eq .profile "default" -}}
 # Default profile
 
