brew: install javascript tools

--- a/dot_Brewfile.tmpl
+++ b/dot_Brewfile.tmpl
@@ -114,6 +114,15 @@ brew "delve"          # Debugger
 brew "mockery"        # Mock generator
 brew "golang-migrate" # Migration manager
 
+# JavaScript
+brew "node"
+brew "deno"
+# TODO: Enable this
+# brew "bun"
+brew "biome" # Language server, linter and formatter
+brew "pnpm"  # Version manager, package manager, project manager, command runner and binary installer
+brew "vite"  # Build tool
+
 {{ if eq .profile "default" -}}
 # Default profile
 
