brew: install work clis

--- a/dot_Brewfile.tmpl
+++ b/dot_Brewfile.tmpl
@@ -89,4 +89,16 @@ cask "proton-drive" # Cloud storage
 cask "dropbox"      # Cloud storage
 cask "onedrive"     # Cloud storage
 cask "google-drive" # Cloud storage
+{{- else if eq .profile "cyberhaven" -}}
+# Cyberhaven profile
+
+# CLIs
+brew "qemu"                        # Virtualisation and emulation
+brew "lima"                        # Virtualisation
+brew "lima-additional-guestagents" # Virtualisation
+brew "sqlcmd"                      # MS SQL client
+brew "awscli"                      # AWS client
+brew "azure-cli"                   # Azure client
+# Proprietary
+cask "gcloud-cli"                  # Google Cloud client
 {{- end }}
