brew: install work guis

--- a/dot_Brewfile.tmpl
+++ b/dot_Brewfile.tmpl
@@ -68,8 +68,14 @@ cask "ghostty"       # Terminal
 cask "emacs-app"     # Text editor
 cask "neovide-app"   # Text editor
 cask "utm"           # Virtualisation and emulation
+cask "bitwarden"     # Password manager
 # Proprietary
-cask "raycast" # Application launcher
+cask "raycast"            # Application launcher
+cask "visual-studio-code" # Text editor
+cask "okta-verify"        # Authenticator
+cask "notion"             # Note taker
+cask "slack"              # Instant messenger
+cask "zoom"               # Video caller
 
 # Shell utilities
 brew "starship" # Prompt
@@ -101,4 +107,15 @@ brew "awscli"                      # AWS client
 brew "azure-cli"                   # Azure client
 # Proprietary
 cask "gcloud-cli"                  # Google Cloud client
+
+# GUIs
+cask "logseq"             # Note taker
+cask "bruno"              # API client
+cask "dbeaver-community"  # DB client
+# Proprietary
+cask "google-chrome"      # Browser
+cask "warp"               # Terminal
+cask "obsidian"           # Note taker
+cask "postman"            # API client
+cask "chatgpt"            # GenAI
 {{- end }}
