brew: install lua tools

--- a/dot_Brewfile.tmpl
+++ b/dot_Brewfile.tmpl
@@ -90,6 +90,11 @@ brew "bash-language-server" # Language server
 brew "shellcheck"           # Linter
 brew "shfmt"                # Formatter
 
+# Lua
+brew "lua-language-server" # Language server
+brew "luacheck"            # Linter
+brew "stylua"              # Formatter
+
 {{ if eq .profile "default" -}}
 # Default profile
 
