brew: install protobuf tools

--- a/dot_Brewfile.tmpl
+++ b/dot_Brewfile.tmpl
@@ -130,6 +130,10 @@ brew "uv"   # Version manager, package manager, project manager, command runner 
 # brew "ty"   # Type checker and language server
 brew "ruff" # Linter and formatter
 
+# Protobuf
+brew "protobuf"
+brew "buf" # Language server, linter and formatter
+
 {{ if eq .profile "default" -}}
 # Default profile
 
