--- a/dot_Brewfile.tmpl
+++ b/dot_Brewfile.tmpl
@@ -95,6 +95,11 @@ brew "lua-language-server" # Language server
 brew "luacheck"            # Linter
 brew "stylua"              # Formatter
 
+# Fennel
+brew "fennel"
+brew "fennel-ls" # Language server
+brew "fnlfmt"    # Formatter
+
 {{ if eq .profile "default" -}}
 # Default profile
 
