brew: install bash tools

--- a/dot_Brewfile.tmpl
+++ b/dot_Brewfile.tmpl
@@ -85,6 +85,11 @@ brew "carapace" # Autocompletion
 tap "timescam/tap"
 brew "timescam/tap/pay-respects"
 
+# Bash
+brew "bash-language-server" # Language server
+brew "shellcheck"           # Linter
+brew "shfmt"                # Formatter
+
 {{ if eq .profile "default" -}}
 # Default profile
 
