brew: install work protobuf tools

--- a/dot_Brewfile.tmpl
+++ b/dot_Brewfile.tmpl
@@ -167,4 +167,8 @@ cask "warp"               # Terminal
 cask "obsidian"           # Note taker
 cask "postman"            # API client
 cask "chatgpt"            # GenAI
+
+# Protobuf
+brew "protoc-gen-go"      # Go transpiler
+brew "protoc-gen-go-grpc" # Go transpiler
 {{- end }}
